<resources>
    <string name="app_name">eReport G1</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="signin">Sign In"</string>
    <string name="login">Log In</string>
    <string name="user">User</string>
    <string name="titlesignin">Write your data</string>
    <string name="title_activity_emergency">EmergencyActivity</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="selImage">Select image.</string>
    <string name="FileNotFound">Unable to open image</string>
    <string name="GpsNotAct">Please turn on your GPS.</string>
    <string name="sendMessage">If you are ready \nsend your message</string>
    <string name="HumDamContent">Click if you or somebody else have damages</string>
    <string name="HumDamQuestion">Are there human damages?</string>
    <string name="SelfDamQuestion">Do you need help?</string>
    <string name="SelfDamContent">Click yes if you are directly involved into the emergency</string>
    <string name="editMessage">Write a new message or aditional info.</string>

    <string name="no_address_found">No address found.</string>
    <string name="service_not_available">service is not available.</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used.</string>

    <string name="no_gps_no_network">Location cannot be obtained.</string>
    <string name="loc_gps">LocationByGPS</string>
    <string name="loc_network">LocationByNetwork</string>
    <string name="address_not_obtained">Address cannot be obtained</string>
    <string name="no_network">Please turn on your network connection</string>
    <string name="title_activity_maps">Map</string>

    <string name="SendMessageToast">Sending message...</string>
    <string name="MessageSended">Message sended</string>
    <string name="MessageFailed">Message couldnt be sended</string>
    <string name="title_activity_wait_for_sending">We are sending your report</string>
    <string name="wait_for_sending">We are sending your report</string>
    <string name="sWaitPoints">...</string>
    <string name="ReloadInitialScreen" />
    <string name="ReloadScreen">Click to send another report</string>
    <string name="MailReport">Mail to send reports</string>

    <string name="action_close_session">Logout</string>
    <string name="action_acount_configuration">Configuration</string>
    <string name="action_profile">Profile</string>
    <string name="action_ranking">Ranking</string>
    <string name="action_achievements">Achievements</string>
    <string name="action_rewards">Rewards</string>
    <string name="action_quests">Quests</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_achievements">AchievementsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_account_configuration">AccountConfigurationActivity</string>
    <string name="title_activity_quests">QuestsActivity</string>
    <string name="title_activity_rewards_p">RewardsPActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>


</resources>
